<?xml version="1.0"?>
<package format="3">
  <name>database_talker</name>
  <version>0.0.0</version>
  <description>The database_talker package</description>

  <maintainer
    email="sktometometo@todo.todo">sktometometo</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_virtualenv</build_depend>

  <exec_depend>mongodb_store</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>jsk_robot_startup</exec_depend>
  <exec_depend>openai_ros</exec_depend>
  <exec_depend>google_chat_ros</exec_depend>
  <exec_depend>gdrive_ros</exec_depend>
  <exec_depend>dialogflow_task_executive</exec_depend>
  <exec_depend>ros_google_cloud_language</exec_depend>

  <export>
    <pip_requirements>requirements.txt</pip_requirements>
  </export>
</package>
