<?xml version="1.0"?>
<package format="2">
  <name>elevator_operation_experiments</name>
  <version>0.0.0</version>
  <description>The elevator_operation_experiments package</description>

  <maintainer email="sktometometo@todo.todo">sktometometo</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>elevator_operation</depend>

  <export></export>
</package>
