<?xml version="1.0"?>
<package format="2">
  <name>jsk_fetch_ros_lock_demo</name>
  <version>0.0.0</version>
  <description>The jsk_fetch_ros_lock_demo package</description>

  <maintainer email="sktometometo@todo.todo">sktometometo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
