<?xml version="1.0"?>
<package format="2">
  <name>jsk_spot_autonomous_integration_demo</name>
  <version>0.0.0</version>
  <description>The jsk_spot_autonomous_integration_demo package</description>

  <maintainer email="sktometometo@todo.todo">sktometometo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>jsk_spot_sdp_localization_demo</exec_depend>
  <exec_depend>scipy</exec_depend>

  <export>
     <pip_requirements>requirements.txt</pip_requirements>
  </export>
</package>
