<?xml version="1.0"?>
<package format="2">
  <name>jsk_watch_dog</name>
  <version>0.0.4</version>
  <description>The jsk_watch_dog package</description>

  <maintainer email="shinjo@jsk.imi.i.u-tokyo.ac.jp">Koki Shinjo</maintainer>
  <author email="chou@jsk.imi.i.u-tokyo.ac.jp">spot</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>smach</depend>
  <depend>smach_ros</depend>
  
  <export>

  </export>
</package>
